--- a/travel/templates/index.html
+++ b/travel/templates/index.html
@@ -61,62 +61,26 @@
 
 						<!-- One -->
 							<section id="one" class="tiles">
+								{% for city in cities %}
 								<article>
 									<span class="image">
-										<img src= {% static 'images/pic01.jpg' %} alt="" />
+										<img src= "{{ city.img.url }}" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Aliquam</a></h3>
-										<p>Ipsum dolor sit amet</p>
+										<h3><a href="landing.html" class="link">{{city.name}}</a></h3>
+										{% if city.offer %}
+										<p> Offer : {{ city.offer }}</p><br/>
+										{% endif %}
+										
+										<p>Description: {{ city.description }}</p><br/>
+										<p>Price : {{ city.price }}</p><br/>
+										
 									</header>
 								</article>
-								<article>
-									<span class="image">
-										<img src= {% static 'images/pic02.jpg' %} alt="" />
-									</span>
-									<header class="major">
-										<h3><a href="landing.html" class="link">Tempus</a></h3>
-										<p>feugiat amet tempus</p>
-									</header>
-								</article>
-								<article>
-									<span class="image">
-										<img src={% static 'images/pic03.jpg' %} alt="" />
-									</span>
-									<header class="major">
-										<h3><a href="landing.html" class="link">Magna</a></h3>
-										<p>Lorem etiam nullam</p>
-									</header>
-								</article>
-								<article>
-									<span class="image">
-										<img src={% static 'images/pic04.jpg' %} alt="" />
-									</span>
-									<header class="major">
-										<h3><a href="landing.html" class="link">Ipsum</a></h3>
-										<p>Nisl sed aliquam</p>
-									</header>
-								</article>
-								<article>
-									<span class="image">
-										<img src= {% static 'images/pic05.jpg' %} alt="" />
-									</span>
-									<header class="major">
-										<h3><a href="landing.html" class="link">Consequat</a></h3>
-										<p>Ipsum dolor sit amet</p>
-									</header>
-								</article>
-								<article>
-									<span class="image">
-										<img src={% static "images/pic06.jpg" %} alt="" />
-									</span>
-									<header class="major">
-										<h3><a href="landing.html" class="link">Etiam</a></h3>
-										<p>Feugiat amet tempus</p>
-									</header>
-								</article>
+								{% endfor %}
 							</section>
-
+						</div>
+								
 						<!-- Two -->
 							<section id="two">
 								<div class="inner">
